# ctx-engine

./: .gitignore  AGENT_INTEGRATION.md  AGENT_SETUP.md  CLAUDE.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml  publish.yml  version-check.yml
docs/: two-tier-memory.md
examples/: agent_example.py  claude_integration.py
migrations/: 001_initial.sql
samples/: config.json  setup_context_engine.sh
src/context_engine/: __init__.py  agent.py  cli.py  config.py  core.py  providers.py  schema.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_integration.py  test_unit.py
